# sdk-zephyr

samples/application_development/out_of_tree_board/boards/arm/simon_52840/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_pca10056_defconfig  simon_nrf52840.dts  simon_nrf52840.yaml
samples/application_development/out_of_tree_board/boards/arm/tindeq_nrf52832/: Kconfig  Kconfig.board  Kconfig.defconfig  tindeq_nrf52832.dts  tindeq_nrf52832.yaml  tindeq_nrf52832_defconfig
samples/application_development/out_of_tree_board/samples/: CMakeLists.txt
samples/basic/blinky/: nrf5340dk_nrf5340_cpuapp.overlay  nrf9160dk_nrf9160ns.overlay
samples/basic/blinky/src/: main.c
samples/basic/button/: nrf5340dk_nrf5340_cpuapp.overlay
samples/basic/button/src/: main.c
samples/bluetooth/peripheral_dis/: CMakeLists.txt  prj.conf
samples/bluetooth/peripheral_dis/services/: my_service.c  my_service.h
samples/bluetooth/peripheral_dis/src/: main.c
samples/hello_world/: CMakeLists.txt  mcuboot.conf  nrf52dk_nrf52832.overlay  nrf9160dk_nrf9160_ns.overlay  pm_static.yml  prj.conf
samples/hello_world/child_image/mcuboot/: prj.conf
samples/hello_world/src/: main.c
samples/subsys/display/lvgl/boards/: nrf9160dk_nrf9160ns.overlay
